--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="navbar navbar-expand-lg bg-body-tertiary">
+    <header class="navbar navbar-expand-lg bg-body-tertiary position-sticky">
         <div class="container">
             <a class="navbar-brand">AGUSTIN TAPIA</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -66,7 +66,7 @@
                     <textarea name="" id="mensaje" class="textarea"></textarea>
                 </div>
 
-                <input type="submit" class="form-submit" value="ENVIAR">
+                <input class="boton-enviar" type="submit" class="form-submit" value="ENVIAR">
                 <p>¡DEJA UN MENSAJE PARA EL MOZART!</p>
             </div>
 
