--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="navbar navbar-expand-lg bg-body-tertiary">
+    <header class="navbar navbar-expand-lg bg-body-tertiary position-sticky">
         <div class="container">
             <a class="navbar-brand">AGUSTIN TAPIA</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
